--- a/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
+++ b/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\NeuralNetworkUtil.cs" />
     <Compile Include="Structs\DataPoint.cs" />
     <Compile Include="Interfaces\INeuralNetworkUtil.cs" />
     <Compile Include="NeuralNetwork.cs" />
