--- a/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
+++ b/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardUtilities.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
