--- a/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
+++ b/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
@@ -49,13 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataHelper.cs" />
-    <Compile Include="Interfaces\NeuralNetworkUtil.cs" />
+    <Compile Include="NetworkHelper.cs" />
     <Compile Include="Structs\DataPoint.cs" />
     <Compile Include="Interfaces\INeuralNetworkUtil.cs" />
     <Compile Include="NeuralNetwork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StandardUtilities.cs" />
+    <Compile Include="NetworkUtilities.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
