--- a/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
+++ b/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
@@ -37,6 +37,10 @@
       <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -48,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseHelper.cs" />
     <Compile Include="DataHelper.cs" />
     <Compile Include="NetworkHelper.cs" />
     <Compile Include="Structs\DataPoint.cs" />
