--- a/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
+++ b/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber/PawOgIsakKoderSomAber.csproj
@@ -57,12 +57,6 @@
     <Compile Include="Bmu.cs" />
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="DataHelper.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="NetworkHelper.cs" />
     <Compile Include="NetworkIllustrator.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -72,6 +66,7 @@
     </Compile>
     <Compile Include="SomHelper.cs" />
     <Compile Include="SomNetwork.cs" />
+    <Compile Include="SomNode.cs" />
     <Compile Include="SomUtilities.cs" />
     <Compile Include="Structs\DataPoint.cs" />
     <Compile Include="Interfaces\INeuralNetworkUtil.cs" />
@@ -86,9 +81,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
